--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,12 @@ before_install:
   - docker --version
   - docker info
 
+  - git submodule update --init --recursive
   - sudo groupadd -r $GALAXY_TRAVIS_USER -g $GALAXY_GID
   - sudo useradd -u $GALAXY_UID -r -g $GALAXY_TRAVIS_USER -d $GALAXY_HOME -p travis_testing -c "Galaxy user" $GALAXY_TRAVIS_USER
   - sudo mkdir $GALAXY_HOME
   - sudo chown -R $GALAXY_TRAVIS_USER:$GALAXY_TRAVIS_USER $GALAXY_HOME
-  - travis_wait 45 'docker build -t galaxy-docker/test .'
+  - travis_wait 40 docker build -t galaxy-docker/test .
   - |
     docker run -d -p 8080:80 -p 8021:21 -p 8800:8800 \
     --name galaxy_test_container \
