--- a/csg.yaml
+++ b/csg.yaml
@@ -40,79 +40,81 @@
 api_key: admin
 galaxy_instance: http://localhost:8080
 tools:
-- name: icqsol_create_shape
-  owner: greg
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
-  revisions:
-    - 949f5f86932
-
-- name: diamond
-  owner: bgruening
-  tool_panel_section_label: "Similarity Search"
-  tool_shed_url: https://toolshed.g2.bx.psu.edu
-  #revisions:
-
-
-- name: icqsol_compose_shapes
-  owner: greg
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
-  revisions:
-    - c2ab4a89b06d
-
-- name: icqsol_refine_shape
-  owner: greg
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
-  revisions:
-    - 0f9045d2f336
-
-- name: icqsol_rotate_shape
-  owner: greg
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
-  revisions:
-    - 0f4599a72a0e
-
-- name: icqsol_translate_shape
-  owner: greg
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
-  revisions:
-    - cd4bb1f942ce
 
 - name: icqsol_add_surface_field_from_expression
   owner: greg
   tool_panel_section_label: "Constructive_Solid_Geometry"
   tool_shed_url: https://testtoolshed.g2.bx.psu.edu
   revisions:
-    - cbd7bd21416c
-
-- name: icqsol_color_surface_field
-  owner: greg
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
-  revisions:
-    - e8fe7af37fac
+    - 5fa6da075198
 
 - name: icqsol_add_texture
   owner: greg
   tool_panel_section_label: "Constructive_Solid_Geometry"
   tool_shed_url: https://testtoolshed.g2.bx.psu.edu
   revisions:
-    - 2a4022a3d058
+    - 44bb7f3c1c61
 
-- name: icqsol_solve_laplace
+- name: icqsol_coarsen_shape
   owner: greg
   tool_panel_section_label: "Constructive_Solid_Geometry"
   tool_shed_url: https://testtoolshed.g2.bx.psu.edu
   revisions:
-    - 696bfb47d45e
+    - 7da9e9b19e7b
+
+- name: icqsol_color_surface_field
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - 076ff1968c8b
+
+- name: icqsol_compose_shapes
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - 2ea276661f42
+
+- name: icqsol_create_shape
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - 15e64b9e9f01
+
+- name: icqsol_refine_shape
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - 3453c0dc27f2
+
+- name: icqsol_rotate_shape
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - e34a6bd0bd31
 
 - name: icqsol_scale_shape
   owner: greg
   tool_panel_section_label: "Constructive_Solid_Geometry"
   tool_shed_url: https://testtoolshed.g2.bx.psu.edu
   revisions:
-    - c3b8705325ea
+    - 3f757911bd4a
+
+- name: icqsol_solve_laplace
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - 52b976a35f8c
+
+- name: icqsol_translate_shape
+  owner: greg
+  tool_panel_section_label: "Constructive_Solid_Geometry"
+  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  revisions:
+    - 18c31466e9cd
+
