--- a/csg.yaml
+++ b/csg.yaml
@@ -1,106 +1,80 @@
----
-# This is a sample file to be used as a reference for populating a list of
-# tools that you wish to install into Galaxy from a Tool Shed via the
-# `install_tool_shed_tools.py` script.
-#
-# For each tool you want to install, you must provide the following keys:
-#  * name: this is is the name of the tool to install
-#  * owner: owner of the Tool Shed repository from where the tools is being
-#           installed
-# Further, you need to provide **one** of the following two keys:
-#  * tool_panel_section_id: ID of the tool panel section where you want the
-#                           tool to be installed. The section ID can be found
-#                           in Galaxy's `shed_tool_conf.xml` config file. Note
-#                           that the specified section must exist in this file.
-#                           Otherwise, the tool will be installed outside any
-#                           section.
-#  * tool_panel_section_label: Display label of a tool panel section where
-#                              you want the tool to be installed. If it does not
-#                              exist, this section will be created on the target
-#                              Galaxy instance (note that this is different than
-#                              when using the ID).
-#                              Multi-word labels need to be placed in quotes.
-#                              Each label will have a corresponding ID created;
-#                              the ID will be an all lowercase version of the
-#                              label, with multiple words joined with
-#                              underscores (e.g., 'BED tools' -> 'bed_tools').
-#
-# Tou can also specify the following optional keys to further define the
-# installation properties:
-#  * tool_shed_url: the URL of the Tool Shed from where the tool should be
-#                   installed. (default: https://toolshed.g2.bx.psu.edu)
-#  * revisions: a list of revisions of the tool, all of which will attempt to
-#               be installed. (default: latest)
-#  * install_tool_dependencies: True or False - whether to install tool
-#                               dependencies or not. (default: True)
-#  * install_repository_dependencies: True or False - whether to install repo
-#                               dependencies or not. (default: True)
-
-
 api_key: admin
 galaxy_instance: http://localhost:8080
 tools:
 
 - name: icqsol_add_surface_field_from_expression
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  new_tool_panel_section_label: "Constructive Solid Geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - c9084b340a89
+    - e12b55e960de
+
+- name: icqsol_add_texture
+  owner: iuc
+  new_tool_panel_section_label: "Constructive Solid Geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
+  revisions:
+    - d6bbaddfa5af
 
 - name: icqsol_coarsen_shape
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - d2d60c27dbd3
+    - 6ff7cf6ec553
 
 - name: icqsol_color_surface_field
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - 54ac75a88fb0
+    - aceda40ef311
 
 - name: icqsol_compose_shapes
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - 1892d351c00c
+    - 1574fdcc16df
 
 - name: icqsol_create_shape
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - 7f3da64cce60
+    - fe94052daa00
 
 - name: icqsol_refine_shape
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - ee1928e36fb4
+    - d543f7bbe8da
 
 - name: icqsol_rotate_shape
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - 06a624817e59
+    - f63d4da328a3
 
 - name: icqsol_scale_shape
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - 01a6fde5bedd
+    - e3bce7e46736
+
+- name: icqsol_solve_laplace
+  owner: iuc
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
+  revisions:
+    - 2294ae1842d5
 
 - name: icqsol_translate_shape
   owner: iuc
-  tool_panel_section_label: "Constructive_Solid_Geometry"
-  tool_shed_url: https://testtoolshed.g2.bx.psu.edu
+  tool_panel_section_id: "constructive_solid_geometry"
+  tool_shed_url: https://toolshed.g2.bx.psu.edu
   revisions:
-    - 314d7cc320b3
-
+    - 88af59c4a2e5
