--- a/csg.yaml
+++ b/csg.yaml
@@ -6,6 +6,7 @@ tools:
   owner: iuc
   tool_panel_section_label: "Constructive Solid Geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - e12b55e960de
 
@@ -13,6 +14,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - d6bbaddfa5af
 
@@ -20,6 +22,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - 6ff7cf6ec553
 
@@ -27,6 +30,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - aceda40ef311
 
@@ -34,6 +38,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - 1574fdcc16df
 
@@ -41,6 +46,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - fe94052daa00
 
@@ -48,6 +54,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - d543f7bbe8da
 
@@ -55,6 +62,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - f63d4da328a3
 
@@ -62,6 +70,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - e3bce7e46736
 
@@ -69,6 +78,7 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - 2294ae1842d5
 
@@ -76,5 +86,6 @@ tools:
   owner: iuc
   tool_panel_section_id: "constructive_solid_geometry"
   tool_shed_url: https://toolshed.g2.bx.psu.edu
+  install_resolver_dependencies: True
   revisions:
     - 88af59c4a2e5
