--- a/.travis.yml
+++ b/.travis.yml
@@ -14,17 +14,12 @@ git:
 
 before_install:
   - wget https://raw.githubusercontent.com/bgruening/galaxy-flavor-testing/master/Makefile
-  - make docker_install
-  - travis wait 45
-  - sudo apt-get update && \
-    apt-get install -y \
-    libgl1-mesa-dri \
-    x11-xserver-utils \
-    x11vnc \
-    xinit \
-    xserver-xorg-video-dummy \
-    xserver-xorg-input-void && \
+    sudo apt-get update -qq
+    sudo apt-get install docker-engine --no-install-recommends -y -o Dpkg::Options::="--force-confmiss" -o Dpkg::Options::="--force-confdef" -o Dpkg::Options::="--force-confnew"
+    sudo apt get install --no-install-recommends -y libgl1-mesa-dri x11-xserver-utils x11vnc xinit xserver-xorg-video-dummy xserver-xorg-input-void
     rm -f /usr/share/applications/x11vnc.desktop
+    docker --version
+    docker info
   - travis_wait 45 make docker_build
   - make docker_run
   - sleep 30
